Waiting spinner added at final submit button and messege submit button

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Djmcampus</title>
-  <base href="./index.htm">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -20,5 +20,5 @@
   gtag('config', 'UA-126639821-1');
 </script>
 
-<script type="text/javascript" src="runtime.cd436e35f1f0a8400636.js"></script><script type="text/javascript" src="polyfills.f6ae3e8b63939c618130.js"></script><script type="text/javascript" src="main.dd573654278a06c07078.js"></script></body>
+<script type="text/javascript" src="runtime.cd436e35f1f0a8400636.js"></script><script type="text/javascript" src="polyfills.f6ae3e8b63939c618130.js"></script><script type="text/javascript" src="main.d59ed3aea4a417ba1a2f.js"></script></body>
 </html>
