The project is completed

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Djmcampus</title>
+  <title>Employment Cell</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.5164bf514bf89a747a03.css"></head>
+<link rel="stylesheet" href="styles.bbcc0128526c83caaa3e.css"></head>
 <body>
   <app-root></app-root>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,5 +20,5 @@
   gtag('config', 'UA-126639821-1');
 </script>
 
-<script type="text/javascript" src="runtime.5d19b589c884d8f79226.js"></script><script type="text/javascript" src="polyfills.f6ae3e8b63939c618130.js"></script><script type="text/javascript" src="main.695b838686e28a569d69.js"></script></body>
+<script type="text/javascript" src="runtime.31f0b2067fb092a0fe6e.js"></script><script type="text/javascript" src="polyfills.f6ae3e8b63939c618130.js"></script><script type="text/javascript" src="main.ebe7f5d92df6e32ada04.js"></script></body>
 </html>
